--- a/packages/backend/src/server/web/bios.css
+++ b/packages/backend/src/server/web/bios.css
@@ -4,16 +4,24 @@
  * SPDX-License-Identifier: AGPL-3.0-only
  */
 
+@import url("https://fonts.bunny.net/css?family=jetbrains-mono");
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.css");
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-jp-dynamic-subset.css");
+
 * {
-	font-family: Fira code, Fira Mono, Consolas, Menlo, Courier, monospace;
+	font-family: "JetBrains Mono", "Pretendard JP", "Pretendard", Fira code, Fira Mono, Consolas, Menlo, Courier, monospace;
+}
+
+h1, header {
+	color: rgb(242, 238, 252);
 }
 
 html {
-	background: #ffb4e1;
+	background: rgb(27, 26, 37);
 }
 
 main {
-	background: #dedede;
+	background: rgb(33, 32, 41);
 }
 main > .tabs {
 	padding: 16px;
