--- a/packages/backend/src/server/web/views/base.pug
+++ b/packages/backend/src/server/web/views/base.pug
@@ -28,6 +28,10 @@ html
 		meta(name='theme-color-orig' content= themeColor || '#86b300')
 		meta(property='og:site_name' content= instanceName || 'Misskey')
 		meta(property='instance_url' content= instanceUrl)
+		if wsUrl
+			meta(name='ws_url' content= wsUrl)
+			if wsTargetDomains && wsTargetDomains.length > 0
+				meta(name='ws_target_domains' content= JSON.stringify(wsTargetDomains))
 		meta(name='viewport' content='width=device-width, initial-scale=1')
 		meta(name='format-detection' content='telephone=no,date=no,address=no,email=no,url=no')
 		link(rel='icon' href= icon || '/favicon.ico')
